# AI-Trader

./: README.md  analysis_AUDUSD_20250511_185828.json  analysis_BTCUSD_2025-05-11_185830.json  analysis_EURUSD_2025-05-11_185826.json  analysis_EURUSD_20250511_180806.json  analysis_EURUSD_20250511_180815.json  analysis_EURUSD_20250511_180838.json  analysis_EURUSD_20250511_182023.json  analysis_EURUSD_20250511_191058.json  analysis_EURUSD_20250511_191211.json  analysis_EURUSD_20250511_191212.json  analysis_EURUSD_20250511_191547.json  analysis_EURUSD_20250511_191722.json  analysis_GBPUSD_20250511_185826.json  analysis_USDCAD_2025-05-11_185828.json  analysis_USDJPY_2025-05-11_185827.json  analysis_XAUUSD_2025-05-11_185829.json  app.py  groq_ai.py  main.py  market_analysis.py  models.py  pyproject.toml  run_telegram_bot.py  telegram_bot.py  telegram_bot_simple.py  trading_bot.py
instance/: trading_bot.db
static/css/: custom.css
static/js/: scripts.js
templates/: analysis.html  index.html  layout.html  trading.html
