[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask-login>=0.6.3",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "psycopg2-binary>=2.9.10",
    "scikit-learn>=1.6.1",
    "werkzeug>=3.1.3",
    "sqlalchemy>=2.0.40",
    "python-telegram-bot==13.15",
    "telegram>=0.0.1",
    "groq>=0.24.0",
    "openai>=1.78.0",
]
